plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.snippetSearcher'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven {
		name = "GitHubPackages"
		url = uri("https://maven.pkg.github.com/ignamendez01/printscript")
		credentials {
			username = "ignamendez01"
			password = "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"
		}
	}
}

dependencies {
	implementation 'org.postgresql:postgresql:42.5.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'printscript:interpreter:2.1.5'
	implementation 'printscript:parser:2.1.5'
	implementation 'printscript:ast:2.1.5'
	implementation 'printscript:lexer:2.1.5'
	implementation 'printscript:token:2.1.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
